--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ env:
   # Add the variable below to upload Algolia indexes
   # Replace HI with the ID of the instance in capital letters
   ALGOLIA_APP_NAME: QPPEAGX4QO
-  ALGOLIA_INDEX_NAME: tutoriales
+  ALGOLIA_INDEX_NAME: Tutoriales
   ALGOLIA_KEY: ${{ secrets.ALGOLIA_KEY }}
   ALGOLIA_ARTIFACT: algolia-indexes-HI.zip
   CONFIG_JSON_PRODUCT: HI
