--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,12 @@ env:
   DOCKER_VERSION: 232.10275
   # Add the variable below to upload Algolia indexes
   # Replace HI with the ID of the instance in capital letters
+  ALGOLIA_APP_NAME: QPPEAGX4QO
+  ALGOLIA_INDEX_NAME: Tutoriales
+  ALGOLIA_KEY: ${{ secrets.ALGOLIA_KEY }}
   ALGOLIA_ARTIFACT: algolia-indexes-HI.zip
+  CONFIG_JSON_PRODUCT: HI
+  CONFIG_JSON_VERSION: 2.0
 
 jobs:
   build:
@@ -100,3 +105,27 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
+
+  publish-indexes:
+    # Requires the build-job results
+    needs: build
+    runs-on: ubuntu-latest
+    container:
+      image: registry.jetbrains.team/p/writerside/builder/algolia-publisher:2.0.32-2
+
+    steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: algolia-indexes
+      - name: Unzip artifact
+        run: |
+          unzip -O UTF-8 -qq ${{ env.ALGOLIA_ARTIFACT }} -d algolia-indexes
+          env "algolia-key=${{env.ALGOLIA_KEY}}" java -jar /opt/builder/help-publication-agent.jar \
+          update-index \
+          --application-name ${{env.ALGOLIA_APP_NAME}} \
+          --index-name ${{env.ALGOLIA_INDEX_NAME}} \
+          --product ${{env.CONFIG_JSON_PRODUCT}} \
+          --version ${{env.CONFIG_JSON_VERSION}} \
+          --index-directory algolia-indexes/ \
+          2>&1 | tee algolia-update-index-log.txt
